[nixos] clipmenu for clipboard manager

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -146,6 +146,9 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 # lock screen
 bindsym $mod+Control+l exec i3lock
 
+# Clipboard manager
+bindsym $mod+Control+v exec clipmenu
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
