--- a/.config/autorandr/lg-dell/config
+++ b/.config/autorandr/lg-dell/config
@@ -3,12 +3,13 @@ off
 output HDMI-1
 off
 output DP-3
-crtc 1
+crtc 0
 mode 2560x1440
 pos 0x0
+primary
 rate 144.00
 output DP-2
-crtc 0
+crtc 1
 mode 2560x1440
 pos 2560x85
 rate 59.95
