[nixos] rollback on xfce (to i3)

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -174,5 +174,5 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
-        tray_output none
+        tray_output primary
 }
