--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -16,6 +16,7 @@ order += "ethernet _first_"
 order += "wireless _first_"
 order += "battery all"
 order += "disk /"
+order += "disk /home/"
 order += "load"
 order += "memory"
 order += "tztime local"
@@ -36,6 +37,10 @@ battery all {
 
 disk "/" {
         format = "Free (/): %avail"
+}
+
+disk "/home/" {
+        format = "Free (/home): %avail"
 }
 
 load {
