--- a/nixos/vms/htb-box/Makefile
+++ b/nixos/vms/htb-box/Makefile
@@ -16,7 +16,7 @@ local: $(wildcard *.nix)
 	nix-build '<nixpkgs/nixos>' -A vm --arg configuration ./configuration.nix
 	QEMU_NET_OPTS=hostfwd=tcp::2221-:22 ./result/bin/run-nixos-vm -smp $$(nproc) \
 	 -m 8G -display none \
-	 -virtfs local,path=$$(readlink -f ./home),security_model=none,mount_tag=home \
+	 -virtfs local,path=$$(readlink -f ./home),security_model=mapped,mount_tag=home \
 	 -pidfile $(PIDFILE) -daemonize
 
 kill:
