[nixos,htb] SSH port as parameter to `make`. Still singleton.
e.g. `sudo make kill SSHPORT=22` to run on 22.

Only one vm can use the created image (currently)

--- a/nixos/vms/htb-box/Makefile
+++ b/nixos/vms/htb-box/Makefile
@@ -3,8 +3,8 @@
 #
 # Specify "Hostname", "Port", and "User" for a "Host" named "target" in `./ssh-config`
 
-PIDFILE := /tmp/htb-box.pid
 SSHPORT := 2221
+PIDFILE := /tmp/htb-box-$(SSHPORT).pid
 
 # TODO:
 #
@@ -31,7 +31,9 @@ local: $(wildcard *.nix)
 	 -pidfile $(PIDFILE) -daemonize
 
 kill:
+	@echo "Killing PID '$$(cat $(PIDFILE) 2>/dev/null)' (from $(PIDFILE))"
 	kill $$(cat $(PIDFILE))
+	rm $(PIDFILE)
 
 clean:
 	if [ -f "$(PIDFILE)" ]; then kill "$$(cat $(PIDFILE))" && sleep 1 || true; fi
